# agent-coordinator

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  agents.json  coordinator.py  handoff.md  parse_next.sh  pyproject.toml  tasks.json  temp-handoff.md  test_visual_tui.py
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: publish.yml
agent_coordinator/: __init__.py  __main__.py  cli.py  handoff_parser.py  models.py  task_store.py  workflow.py
agent_coordinator/application/: prompt_builder.py  router.py  runner.py  task_classifier.py  task_service.py
agent_coordinator/domain/: __init__.py  lifecycle.py  models.py  retry_policy.py
agent_coordinator/helpers/: __main__.py  create_task.py  import_plan.py
agent_coordinator/infrastructure/: claude_runner.py  copilot_runner.py  diagnostic_log.py  editor.py  enhanced_input.py  event_log.py  generic_runner.py  handoff_reader.py  human_prompt.py  manual_runner.py  opencode_runner.py  output_display.py  pty_utils.py  session_store.py  startup_cli.py  task_repository.py  tui.py  workflow_state_repository.py
agent_coordinator/prompts/: architect.md  developer.md  planner_helper.md  qa_engineer.md  shared_rules.md
docs/: ANALYSIS.md  backend-detection.md  backend-quick-reference.md  custom-backends.md  editor-integration.md  enhanced-input.md  helper-agent.md  human-agent.md  interactive-control.md  observability-and-helpers.md  output-window.md  protocol.md  visual-interface.md  workflow.md
examples/: SPECIFICATION.md  complete_demo.sh  custom-backend-example.json  demo_enhanced_input.py  demo_observability.py  demo_tui.py  handoff.md  mock-ai-tool  mock-ai-tool-README.md  plan.md  tasks.json
examples/tetris-demo/: README.md  SPECIFICATION.md  handoff.md  tetris.html
prompts/: agent_template.md  architect.md  developer.md  engineer.md  helper.md  qa_engineer.md  shared_rules.md
scripts/: README.md
src/: __init__.py  handoff_parser.py  models.py  task_store.py  workflow.py
src/application/: __init__.py  prompt_builder.py  router.py  runner.py  task_service.py
src/domain/: lifecycle.py  models.py  retry_policy.py
src/infrastructure/: __init__.py  claude_runner.py  event_log.py  handoff_reader.py  manual_runner.py  opencode_runner.py  task_repository.py
tests/: test_claude_runner.py  test_cli_coordinator_loop.py  test_cli_functions.py  test_coordinator_fixes.py  test_copilot_runner.py  test_diagnostic_log.py  test_editor.py  test_enhanced_input.py  test_event_log.py  test_generic_runner.py  test_generic_runner_extended.py  test_handoff_parser.py  test_handoff_parser_extended.py  test_handoff_reader.py  test_human_prompt.py  test_human_prompt_extended.py  test_import_plan.py  test_import_plan_extended.py  test_lifecycle.py  test_manual_runner.py  test_opencode_runner.py  test_prompt_builder.py  test_pty_utils.py  test_pty_utils_extended.py  test_retry_policy.py  test_router.py  test_runners.py  test_session_store.py  test_startup_cli.py  test_task_repository.py  test_task_service.py  test_task_service_status.py  test_task_state.py  test_tui.py  test_tui_rendering.py  test_visual_tui.py  test_workflow.py  test_workflow_state_repository.py
tests/integration/: conftest.py  test_coordinator_integration.py  test_opencode_runner_live.py
workspace/: README.md  SPECIFICATION.md  agents.json  handoff.md  plan.md  tasks.json
