[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-coordinator"
version = "1.0.0rc1"
description = "Tool-agnostic multi-agent workflow coordinator. Orchestrate AI coding agents through a structured handoff protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zoran Kucekovic" },
]
keywords = [
    "multi-agent",
    "ai",
    "workflow",
    "orchestration",
    "opencode",
    "claude",
    "coding-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zkucekovic/agent-coordinator"
Repository = "https://github.com/zkucekovic/agent-coordinator"
Issues = "https://github.com/zkucekovic/agent-coordinator/issues"

[project.scripts]
agent-coordinator = "agent_coordinator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_coordinator*"]

[tool.setuptools.package-data]
agent_coordinator = ["prompts/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["agent_coordinator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
