[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-coordinator"
version = "1.0.0rc4"
description = "Tool-agnostic multi-agent workflow coordinator. Orchestrate AI coding agents through a structured handoff protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zoran Kucekovic" },
]
keywords = [
    "multi-agent",
    "ai",
    "workflow",
    "orchestration",
    "opencode",
    "claude",
    "coding-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zkucekovic/agent-coordinator"
Repository = "https://github.com/zkucekovic/agent-coordinator"
Issues = "https://github.com/zkucekovic/agent-coordinator/issues"

[project.scripts]
agent-coordinator = "agent_coordinator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_coordinator*"]

[tool.setuptools.package-data]
agent_coordinator = ["prompts/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "C90",    # McCabe cyclomatic complexity
    "N",      # pep8-naming
    "A",      # flake8-builtins (shadowing builtins)
    "T20",    # flake8-print (stray prints)
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PLR",    # Pylint refactor (too many args/branches/etc.)
    "PLW",    # Pylint warnings
    "PLE",    # Pylint errors
    "PERF",   # Perflint (performance anti-patterns)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "SIM108",  # ternary operator — readability preference
    "PT009",   # unittest-style assertions — this project uses unittest.TestCase
    "PT027",   # unittest-style assertRaises — same reason
    "T201",    # print() — this is a CLI/TUI tool; print is intentional
    "PLR2004", # magic values in comparisons — too noisy for test assertions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",     # test helpers/mocks often have unused args by design
    "PLR0915", # test methods can be long
    "PLR0912", # test methods can have many branches
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["agent_coordinator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
